# zmotion_interface

./: .gitignore  CMakeLists.txt  README.md
cmake/: ExportPackage.cmake  RobotAlgoConfig.cmake  TopCmakeConfig.cmake  ZauxRobotConfig.cmake
config/: robot_configuration.bas
config/test/: Swing_C.bas  main.bas  robot6.bas  robot95.bas  slot0.bas  swing.bas  test.zpj
include/: DiscreteTrajectory.h  FsCraftDef.h  zmotion_interface.h
src/: demo.cpp  zmotion_interface.cpp
